--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix</title>
+    <link rel="stylesheet" href="Netflix.css">
+</head>
+<body>
+    <div class="hero-section">
+        <nav class="header">
+            <img class="logo" src="Images/logo.png" alt="logo"/>   
+            <div class="head-button">
+                <button class="b1">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                        <style>svg{fill: whitesmoke}</style>
+                        <path d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Zm0-82q26-36 45-75t31-83H404q12 44 31 83t45 75Zm-104-16q-18-33-31.5-68.5T322-320H204q29 50 72.5 87t99.5 55Zm208 0q56-18 99.5-55t72.5-87H638q-9 38-22.5 73.5T584-178ZM170-400h136q-3-20-4.5-39.5T300-480q0-21 1.5-40.5T306-560H170q-5 20-7.5 39.5T160-480q0 21 2.5 40.5T170-400Zm216 0h188q3-20 4.5-39.5T580-480q0-21-1.5-40.5T574-560H386q-3 20-4.5 39.5T380-480q0 21 1.5 40.5T386-400Zm268 0h136q5-20 7.5-39.5T800-480q0-21-2.5-40.5T790-560H654q3 20 4.5 39.5T660-480q0 21-1.5 40.5T654-400Zm-16-240h118q-29-50-72.5-87T584-782q18 33 31.5 68.5T638-640Zm-234 0h152q-12-44-31-83t-45-75q-26 36-45 75t-31 83Zm-200 0h118q9-38 22.5-73.5T376-782q-56 18-99.5 55T204-640Z"/>
+                    </svg>
+                    <select name="lang" id="head-lang">
+                        <option value="English">English</option>
+                        <option value="हिन्दी">हिन्दी</option>
+                    </select>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                        <path d="M480-360 280-560h400L480-360Z"/>
+                    </svg>
+                </button>
+                <button class="b2">Sign in</button>
+            </div>
+        </nav>
+        <div class="hero-content">
+            <h1>Enjoy big movies, hit series and more from ₹ 149.</h1>
+            <h3>Watch anywhere. Cancel anytime.</h3>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+            <form class="email-signin">
+                <div class="email-cont">
+                    <input type="email" placeholder="Email address" required/>
+                </div>
+                
+                <button type="submit">Get Started</button>
+            </form>
+        </div>
+    </div>
+    <div class="border">
+    </div>
+    <div class="feature">
+        <div class="feature-row">
+            <div class="text-section">
+                <h2>Enjoy on your TV</h2>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            </div>
+        <div class="img-section">
+            <video class="vid" src="Images/video-tv-in-0819.m4v" autoplay muted loop></video>
+            <img src="Images/feature-1.png" alt="tv">
+        </div>
+    </div>
+    <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <ul class="questions">
+            <li>
+                <input type="radio" name="questions" id="first">
+                <label for="first">What is Netflix?</label>
+                <div class="content">
+                    <p>
+                        Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
+                    </p>
+                    <p>
+                        You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!
+                    </p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="questions" id="second">
+                <label for="second">How much does Netflix cost?</label>
+                <div class="content">
+                    <p>
+                        Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="questions" id="third">
+                <label for="third">Where can I watch?</label>
+                <div class="content">
+                    <p>
+                        Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                    </p>
+                    <p>
+                        You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="questions" id="fourth">
+                <label for="fourth">How do I cancel?</label>
+                <div class="content">
+                    <p>
+                        Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="questions" id="fifth">
+                <label for="fifth">What can I watch on Netflix?</label>
+                <div class="content">
+                    <p>
+                        Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="questions" id="sixth">
+                <label for="sixth">Is Netflix good for kids?</label>
+                <div class="content">
+                    <p>
+                        The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.
+                    </p>
+                    <p>
+                        Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don't want kids to see.
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="foot-content">
+        <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <form class="email-signin">
+            <div class="email-cont">
+                <input type="email" placeholder="Email address" required/>
+            </div>
+            
+            <button type="submit">Get Started</button>
+        </form>
+    </div>
+    <div class="border">
+    </div>
+    <footer>
+        <h2>Questions? Call <span><a href="#">000-800-919-1694</a></span></h2>
+        <div class="foot-col">
+            <div class="foot-row">
+                <a href="#">FAQ</a>
+                <a href="#">Account</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Ways to Watch</a>
+                <a href="#">Privacy</a>
+                <a href="#">Corporate Information</a>
+                <a href="#">Speed Test</a>
+                <a href="#">Only on Netflix</a>
+            </div>
+            <div class="foot-row">
+                <a href="#">Help Center</a>
+                <a href="#">Media Centre</a>
+                <a href="#">Jobs</a>
+                <a href="#">Terms of Use</a>
+                <a href="#">Cookie Preferences</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Legal Notices</a>
+            </div>
+        </div>
+        <button class="b3">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                <style>svg{fill: whitesmoke}</style>
+                <path d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Zm0-82q26-36 45-75t31-83H404q12 44 31 83t45 75Zm-104-16q-18-33-31.5-68.5T322-320H204q29 50 72.5 87t99.5 55Zm208 0q56-18 99.5-55t72.5-87H638q-9 38-22.5 73.5T584-178ZM170-400h136q-3-20-4.5-39.5T300-480q0-21 1.5-40.5T306-560H170q-5 20-7.5 39.5T160-480q0 21 2.5 40.5T170-400Zm216 0h188q3-20 4.5-39.5T580-480q0-21-1.5-40.5T574-560H386q-3 20-4.5 39.5T380-480q0 21 1.5 40.5T386-400Zm268 0h136q5-20 7.5-39.5T800-480q0-21-2.5-40.5T790-560H654q3 20 4.5 39.5T660-480q0 21-1.5 40.5T654-400Zm-16-240h118q-29-50-72.5-87T584-782q18 33 31.5 68.5T638-640Zm-234 0h152q-12-44-31-83t-45-75q-26 36-45 75t-31 83Zm-200 0h118q9-38 22.5-73.5T376-782q-56 18-99.5 55T204-640Z"/>
+            </svg>
+            <select>
+                <option value="English">English</option>
+                <option value="हिन्दी">हिन्दी</option>
+            </select>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                <path d="M480-360 280-560h400L480-360Z"/>
+            </svg>
+        </button>
+        <p>Netflix India</p>
+    </footer>
+</body>
+</html>
