--- a/Netflix.html
+++ b/Netflix.html
@@ -48,9 +48,46 @@
                 <h2>Enjoy on your TV</h2>
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
-        <div class="img-section">
-            <video class="vid" src="Images/video-tv-in-0819.m4v" autoplay muted loop></video>
-            <img src="Images/feature-1.png" alt="tv">
+            <div class="img-section">
+                <video class="vid" src="Images/video-tv-in-0819.m4v" autoplay muted loop></video>
+                <img src="Images/feature-1.png" alt="tv">
+            </div>
+        </div>
+        <div class="border">
+        </div>
+        <div class="feature-row even">
+            <div class="img-section">
+                <img src="Images/feature-2.png" alt="tv">
+            </div>
+            <div class="text-section">
+                <h2>Download your shows to watch offline</h2>
+                <p>Save your favourites easily and always have something to watch.</p>
+            </div>
+        </div>
+        <div class="border">
+        </div>
+        <div class="feature-row">
+            <div class="text-section">
+                <h2>Watch everywhere</h2>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+            </div>
+            <div class="img-section">
+                <video class="vid2" src="Images/video-devices-in.m4v" autoplay muted loop></video>
+                <img src="Images/feature-3.png" alt="tv">
+            </div>
+        </div>
+        <div class="border">
+        </div>
+        <div class="feature-row even">
+            <div class="img-section">
+                <img src="Images/feature-4.png" alt="tv">
+            </div>
+            <div class="text-section">
+                <h2>Create profiles for kids</h2>
+                <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
+            </div>
+        </div>
+        <div class="border">
         </div>
     </div>
     <div class="faq">
@@ -136,7 +173,6 @@
     <footer>
         <h2>Questions? Call <span><a href="#">000-800-919-1694</a></span></h2>
         <div class="foot-col">
-            <div class="foot-row">
                 <a href="#">FAQ</a>
                 <a href="#">Account</a>
                 <a href="#">Investor Relations</a>
@@ -145,8 +181,6 @@
                 <a href="#">Corporate Information</a>
                 <a href="#">Speed Test</a>
                 <a href="#">Only on Netflix</a>
-            </div>
-            <div class="foot-row">
                 <a href="#">Help Center</a>
                 <a href="#">Media Centre</a>
                 <a href="#">Jobs</a>
@@ -154,7 +188,6 @@
                 <a href="#">Cookie Preferences</a>
                 <a href="#">Contact Us</a>
                 <a href="#">Legal Notices</a>
-            </div>
         </div>
         <button class="b3">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
