--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
     <link rel="stylesheet" href="Netflix.css">
+    <link rel="icon" type="image/x-icon" href="Images/netflix_logo_icon_170919.ico">
 </head>
 <body>
     <div class="hero-section">
